--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "express-fileupload": "^0.3.0",
+    "fs": "0.0.1-security",
     "http": "^0.0.0",
+    "net": "^1.0.2",
     "vue": "^2.5.3",
     "vue-router": "^2.7.0",
-    "vuetify": "^0.17.0"
+    "vuetify": "^0.17.0",
+    "xlsx": "^0.11.9"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
