--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express-fileupload": "^0.3.0",
     "fs": "0.0.1-security",
     "http": "^0.0.0",
+    "lodash": "^4.17.4",
     "net": "^1.0.2",
     "vue": "^2.5.3",
     "vue-router": "^2.7.0",
